{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 37,
  "lineage": "90d46c38-f25c-ba9a-ad1a-5a59ffa5036e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_pip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.7",
            "association_id": "eipassoc-007f883f925420a3e",
            "domain": "vpc",
            "id": "eipalloc-04df6d94372c0fd26",
            "instance": "i-01658e3bccc0c6e4c",
            "network_interface": "eni-0250071905d3e6a10",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-54-156-28-175.compute-1.amazonaws.com",
            "public_ip": "54.156.28.175",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.stack-ec2-public",
            "aws_internet_gateway.stackigw",
            "aws_network_interface.my_network_interface_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07550af852d666a53",
            "domain": "vpc",
            "id": "eipalloc-017ae8b88c66c6c46",
            "instance": "i-0cc15a8d5f2f4a064",
            "network_interface": "eni-0c2cab88c409816a7",
            "private_dns": "ip-10-0-0-99.ec2.internal",
            "private_ip": "10.0.0.99",
            "public_dns": "ec2-3-93-99-40.compute-1.amazonaws.com",
            "public_ip": "3.93.99.40",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.public-ec2-key",
            "aws_security_group.nat",
            "aws_subnet.stack-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:449143996953:instance/i-0cc15a8d5f2f4a064",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc15a8d5f2f4a064",
            "instance_state": "running",
            "instance_type": "m1.small",
            "ipv6_address_count": 0,
            "key_name": "public-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2cab88c409816a7",
            "private_dns": "ip-10-0-0-99.ec2.internal",
            "private_ip": "10.0.0.99",
            "public_dns": "ec2-34-207-159-199.compute-1.amazonaws.com",
            "public_ip": "34.207.159.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-021fea1002e744e92",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-046b47573bd48dcd0",
            "tags": {
              "Name": "VPC NAT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0736ba71e34eadee5"
            ]
          },
          "dependencies": [
            "aws_key_pair.public-ec2-key",
            "aws_security_group.nat",
            "aws_subnet.stack-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "stack-ec2-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:449143996953:instance/i-0db1d42fe4513d0a5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db1d42fe4513d0a5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b3405093b25b330a"
              }
            ],
            "primary_network_interface_id": "eni-0b3405093b25b330a",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_ip": "10.0.1.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fecc3757b09f2859",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cc8c9d594c03aa3",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0736ba71e34eadee5"
            ]
          },
          "dependencies": [
            "aws_key_pair.private-ec2-key",
            "aws_network_interface.my_network_interface_private",
            "aws_security_group.nat",
            "aws_subnet.stack-private-subnet",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "stack-ec2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:449143996953:instance/i-01658e3bccc0c6e4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01658e3bccc0c6e4c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0250071905d3e6a10"
              }
            ],
            "primary_network_interface_id": "eni-0250071905d3e6a10",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-54-156-28-175.compute-1.amazonaws.com",
            "public_ip": "54.156.28.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03455f91f890515a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046b47573bd48dcd0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0736ba71e34eadee5"
            ]
          },
          "dependencies": [
            "aws_key_pair.public-ec2-key",
            "aws_network_interface.my_network_interface_public",
            "aws_security_group.nat",
            "aws_subnet.stack-public-subnet",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stackigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:internet-gateway/igw-05e66bddc1f9fdb8e",
            "id": "igw-05e66bddc1f9fdb8e",
            "owner_id": "449143996953",
            "vpc_id": "vpc-0711ce48ad7f65f48"
          },
          "dependencies": [
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_network_interface_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-09ead8291d026ef4a",
                "device_index": 0,
                "instance": "i-0db1d42fe4513d0a5"
              }
            ],
            "id": "eni-0b3405093b25b330a",
            "mac_address": "02:fb:37:0a:39:87",
            "private_dns_name": "ip-10-0-1-8.ec2.internal",
            "private_ip": "10.0.1.8",
            "private_ips": [
              "10.0.1.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0736ba71e34eadee5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cc8c9d594c03aa3",
            "tags": {
              "Name": "STACK-EC2-PUBLIC"
            }
          },
          "dependencies": [
            "aws_security_group.nat",
            "aws_subnet.stack-private-subnet",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_network_interface_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0601d1634e309bb31",
                "device_index": 0,
                "instance": "i-01658e3bccc0c6e4c"
              }
            ],
            "id": "eni-0250071905d3e6a10",
            "mac_address": "12:b7:01:11:b6:77",
            "private_dns_name": "ip-10-0-0-7.ec2.internal",
            "private_ip": "10.0.0.7",
            "private_ips": [
              "10.0.0.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0736ba71e34eadee5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046b47573bd48dcd0",
            "tags": {
              "Name": "STACK-EC2-PUBLIC"
            }
          },
          "dependencies": [
            "aws_security_group.nat",
            "aws_subnet.stack-public-subnet",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stack-rt-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0378cd793a179b4a4",
            "owner_id": "449143996953",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0cc15a8d5f2f4a064",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0711ce48ad7f65f48"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.public-ec2-key",
            "aws_security_group.nat",
            "aws_subnet.stack-public-subnet",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stack-rt-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dd1b69c95963c45e",
            "owner_id": "449143996953",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e66bddc1f9fdb8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0711ce48ad7f65f48"
          },
          "dependencies": [
            "aws_internet_gateway.stackigw",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stack-rta-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0561f4d90ca4f69c4",
            "route_table_id": "rtb-0378cd793a179b4a4",
            "subnet_id": "subnet-03cc8c9d594c03aa3"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.public-ec2-key",
            "aws_route_table.stack-rt-private",
            "aws_security_group.nat",
            "aws_subnet.stack-private-subnet",
            "aws_subnet.stack-public-subnet",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stack-rta-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f00fbbff511834c",
            "route_table_id": "rtb-0dd1b69c95963c45e",
            "subnet_id": "subnet-046b47573bd48dcd0"
          },
          "dependencies": [
            "aws_route_table.stack-rt-public",
            "aws_subnet.stack-public-subnet",
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:security-group/sg-0736ba71e34eadee5",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0736ba71e34eadee5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": "",
            "owner_id": "449143996953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NATSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0711ce48ad7f65f48"
          },
          "dependencies": [
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stack-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:subnet/subnet-03cc8c9d594c03aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03cc8c9d594c03aa3",
            "map_public_ip_on_launch": false,
            "owner_id": "449143996953",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0711ce48ad7f65f48"
          },
          "dependencies": [
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stack-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:subnet/subnet-046b47573bd48dcd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-046b47573bd48dcd0",
            "map_public_ip_on_launch": false,
            "owner_id": "449143996953",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0711ce48ad7f65f48"
          },
          "dependencies": [
            "aws_vpc.stackvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stackvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449143996953:vpc/vpc-0711ce48ad7f65f48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f2e9ead4e001b1c",
            "default_route_table_id": "rtb-038ba47f0fa59ec9e",
            "default_security_group_id": "sg-0364648ee55edf252",
            "dhcp_options_id": "dopt-e7c7549d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0711ce48ad7f65f48",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-038ba47f0fa59ec9e",
            "owner_id": "449143996953",
            "tags": {
              "Name": "TF-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}